Fog now obstructs player's view and becomes red.

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,10 @@ dependencies {
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 }
 
+loom {
+	accessWidenerPath = file("src/main/resources/midnightlurker.accesswidener")
+}
+
 processResources {
 	inputs.property "version", project.version
 
