--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.2+build.4
 loader_version=0.15.7
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.20.2-1.0.1
 maven_group=net.mcreator
 archives_base_name=midnightlurker
 
